--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@astrojs/vercel": "^9.0.3",
+    "@types/node": "^25.0.8",
     "@types/react-slick": "^0.23.13"
   }
 }
