--- a/.vercel/output/config.json
+++ b/.vercel/output/config.json
@@ -24,6 +24,10 @@
 			"dest": "_render"
 		},
 		{
+			"src": "^/comercios/?$",
+			"dest": "_render"
+		},
+		{
 			"src": "^/$",
 			"dest": "_render"
 		}
